<resources>
    <string name="app_name">AppCurriculo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="label_inicial">Bem Vindo ao App!</string>
    <string name="tituloInfoPessoaisActivity">Informações Pessoais</string>
    <string name="bt_cadastrar">Cadastrar CV</string>
    <string name="txtNome">Nome:</string>
    <string name="txtEndereco">Endereço:</string>
    <string name="txtEstado">Estado:</string>
    <string name="txtCidade">Cidade:</string>
    <string name="txtTelefone">Telefone:</string>
    <string name="txtEmail">E-mail:</string>
    <string name="bt_gravar">Cadastrar</string>
    <string name="SQLite">Aqui a activity puxa os dados com SQLite</string>
</resources>
